...
              color: AppPallete.primaryColor,
            ),
          ),
          Align(
            alignment: Alignment.center,
            child: GestureDetector(
              key: const Key('googleSignInButton'),
              onTap: () {
                context.read<AuthBloc>().add(AuthGoogleSignInEvent());
              },
              child: Container(
                decoration: BoxDecoration(
                    border:
...
